# offchain-gateway-rs

./: .env.example  Cargo.toml  README.md  docker-compose.yaml
.github/_workflows/: README.md  build.yaml
.github/workflows/: build.yaml
crates/offchain-gateway/: Cargo.toml
examples/full/: .env.example  Cargo.toml  Dockerfile  README.md
examples/full/src/: http.rs  state.rs
examples/full/src/database/: mod.rs
examples/full/src/gateway/: response.rs
examples/full/src/multicoin/cointype/: coins.rs  mod.rs
examples/full/src/multicoin/encoding/: binance.rs  hedera.rs  p2pkh.rs  stellar.rs
examples/full/src/selfservice/: mod.rs  view.rs
examples/full/src/utils/: axum_json.rs  mod.rs
examples/minimal/: Cargo.toml
src/: http.rs  main.rs  state.rs
src/ccip/lookup/: mod.rs
src/database/: mod.rs
src/gateway/: endpoint.rs  mod.rs  payload.rs  resolution.rs  response.rs  signing.rs
src/multicoin/: mod.rs
src/multicoin/cointype/: slip44.rs
src/multicoin/encoding/: binance.rs  bitcoin.rs  bitcoin_cash.rs  cardano.rs  checksum_address.rs  dogecoin.rs  hedera.rs  litecoin.rs  mod.rs  monacoin.rs  monero.rs  p2pkh.rs  p2sh.rs  polkadot.rs  ripple.rs  segwit.rs  solana.rs  stellar.rs  tezos.rs
src/selfservice/: endpoint.rs  view.rs
src/utils/: dns.rs  mod.rs
