[package]
name = "offchain-gateway-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
dotenvy = "0.15.7"
ethers = "2.0.10"
ethers-contract-derive = "2.0.11"
ethers-core = { version = "2.0.11", features = ["eip712"] }
hex = "0.4.3"
postgres = "0.19.7"
postgres-types = { version = "0.2.6", features = ["derive", "with-serde_json-1"] }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = {version = "1", features = ["full"]}
tokio-postgres = "0.7.10"
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
postgres = []
selfservice = []
eoa-auth = []
default = ["postgres", "selfservice", "eoa-auth"]
