[package]
name = "offchain-gateway-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
dotenvy = "0.15.7"
ethers = "2.0.10"
ethers-contract = "2.0.11"
ethers-contract-derive = "2"
ethers-core = { version = "2.0.11", features = ["eip712"] }
hex = "0.4.3"
postgres = "0.19.7"
postgres-types = { version = "0.2.6", features = ["derive", "with-serde_json-1"] }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = {version = "1", features = ["full"]}
tokio-postgres = "0.7.10"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
lazy_static = { version = "1.4.0", features = [] }

# Multicoin encoding
bs58 = "0.5.0"
base32 = "0.4.0"
bech32 = "0.10.0-beta"
blake2 = "0.10.6"
sha2 = "0.10.8"
crc16 = "0.4.0"
ciborium = "0.2.1"
crc32fast = "1.3.2"

[dev-dependencies]
hex-literal = "0.4.1"

[features]
postgres = []
selfservice = []
eoa-auth = []
admin-auth = []
default = ["postgres", "selfservice", "eoa-auth", "admin-auth"]
